# PlanMate

./: CMakeLists.txt  README.md  main.cpp  planmate.cpp  planmate.h  planmate.ui  todo.cpp  todo.h  todo.ui
PlanMate/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
PlanMate/BusinessLogic/: BusinessLogic_global.h  CMakeLists.txt  businesslogic.cpp  businesslogic.h  task.cpp  task.h  taskmanager.cpp  taskmanager.h  taskmodel.cpp  taskmodel.h
